testing/2_functional/invalidRequestBody/mwdi+diagram.invalidRequestBody.plantuml
@startuml mwdi+diagram.invalidRequestBody
skinparam responseMessageBelowArrow true

title
mwdi+testcase.invalidRequestBody
end title

participant "Postman" as Postman
participant "Data" as Data
participant "Collection" as Collection

group Receivers for Notifications
  note right Postman
    see mwdi+diagram.invalidRequestBody.receiver
  end note
end

group Providers of Data
  note right Postman
    see mwdi+diagram.invalidRequestBody.dataprovider
  end note
end

group Offered Subscriptions
  note right Postman
    see mwdi+diagram.invalidRequestBody.subscriptions
  end note
end

group ControlConstruct
  note right Postman
    t.b.d. (2)
  end note
end

group Alarms
  note right Postman
    might be transferred into another application
  end note
end

group Equipment
  note right Postman
    t.b.d. (1)
  end note
end

group Firmware
  note right Postman
    t.b.d. (5)
  end note
end

group Profiles
  note right Postman
    t.b.d.
  end note
end

group Connections
  note right Postman
    t.b.d. (4)
  end note
end

group Interfaces
  note right Postman
    t.b.d
  end note
end

deactivate Postman

@enduml
